fix QR set list overflow

--- a/style.less
+++ b/style.less
@@ -17,6 +17,7 @@ html > body .stqrs--root {
         overflow: auto;
         margin: 0;
         align-self: end;
+        max-height: calc(var(--y) * 1px - 1vh);
         .stqrs--set {
             display: flex;
             gap: 0.5em;
